--- a/media/css/default.css
+++ b/media/css/default.css
@@ -12,7 +12,7 @@ h2{ font-size: 26px; padding: 0 0 10px 0; }
 h3{ font-size: 17px; padding: 0 0 10px 0; }
 h4{ font-size: 16px; padding: 0 0 5px 0; }
 h5{ font-size: 14px; padding: 0 0 5px 0; }
-h6{ font-size: 12px;margin-bottom:5px;margin-left:10%;margin-right:10%;width:80%;}
+h6{ font-size: 12px;margin-bottom:5px;}
 
 
 strong  { font-weight: bold;}
