--- a/media/css/style.css
+++ b/media/css/style.css
@@ -421,6 +421,12 @@ vertical-align:top
      -moz-border-radius: 4px;
           border-radius: 4px;
 }
+.alert-danger,
+.alert-error {
+  color: #b94a48;
+  background-color: #f2dede;
+  border-color: #eed3d7;
+}
 .label,
 .badge {
   display: inline-block;
