--- a/media/css/print.css
+++ b/media/css/print.css
@@ -5,7 +5,7 @@ font-family: Tahoma, verdana, sans-serif;}
 a{content: " (" attr(href) ")";color:#000000;}
 h3{font-size:13px;margin-bottom:-26px;color:#2A2A2A;padding:0px;margin:0px;}
 
-#title,#search,.img{display:none;}
+#title,#search,.img,.excel{display:none;}
 div#report{width:842px;}
 #report{width:842px;padding:10px;margin:0 auto;}
 #report #multiAccordion{ width:100%;margin:0;}
