--- a/media/css/print.css
+++ b/media/css/print.css
@@ -5,11 +5,12 @@ font-family: Tahoma, verdana, sans-serif;}
 a{content: " (" attr(href) ")";color:#000000;}
 h3{font-size:13px;margin-bottom:-26px;color:#2A2A2A;padding:0px;margin:0px;}
 
-#title,#search,.img,.excel{display:none;}
+#title,#search,.img,.excel,.btn_close,#topmenu,.userlogedin,#footer{display:none;}
+.svg-to-img{display:block;}
 div#report{width:842px;}
 #report{width:842px;padding:10px;margin:0 auto;}
 #report #multiAccordion{ width:100%;margin:0;}
-#report #title{display:block;margin-bottom:22px;margin-top:-16px;}
+#report #title{display:block;margin-bottom:22px;margin-top:-16px;text-align:center;}
 #report table{margin-top:10px;}
 #report #area_btn_print{display:block;margin:5% 37%}
 #btn_printout{display:none;}
@@ -21,6 +22,7 @@ div#report{width:842px;}
 #report #reference{margin-top:10px;}
 #report .right{margin-top:-13px;}
 #report h6{width:100%;margin-left:0px;margin-right:0px;}
+
 
 .tbreport{width:100%;margin:0;}
 .tbreport th{height:17px;}
