--- a/themes/default/media/css/style.css
+++ b/themes/default/media/css/style.css
@@ -75,8 +75,8 @@ a:hover {color:#0190fe;}
 	#news-pr ul li{ background:url(../images/bullet1.png) no-repeat 0px 7px; padding-left:20px; line-height:25px;}
 	#news-pr ul li a{color:#4f4f4f;}
 	#news-pr ul li a:hover{color:#0985dc;}
-	input[type="submit"].btn_readAll {float:right; width:75px; height:21px; background:url(../images/btn_readAll_reg.png) no-repeat; border:0; cursor:pointer;}
-	input[type="submit"].btn_readAll:hover {float:right; width:75px; height:21px; background:url(../images/btn_readAll_hot.png) no-repeat; border:0; cursor:pointer;}
+	.btn_readAll {display:block;float:right; width:75px; height:21px; background:url(../images/btn_readAll_reg.png) no-repeat; border:0; cursor:pointer;}
+	.btn_readAll:hover {display:block;float:right; width:75px; height:21px; background:url(../images/btn_readAll_hot.png) no-repeat; border:0; cursor:pointer;}
 	.btn_r36{display:inline-block; width:92px; height:18px; background:url(../images/btn_r36.png) no-repeat; border:0; cursor:pointer;}
 	.btn_gis{display:inline-block; width:145px; height:18px; background:url(../images/btn_gis.png) no-repeat; border:0; cursor:pointer;}
 	/* news- */
@@ -111,5 +111,12 @@ ul#description li{float:left;width:100px;}
 .brochure ul li{float:left;width:50%;line-height: 17px;}
 .brochure ul li.image{width:100px;padding:5px;border:1px solid #BBBBBB;margin-right:10px;text-align:center;}
 .brochure ul li.title{width:80%;}
-
-
+.pic{width: 655px;height:230px;}
+.pic .span4{margin-bottom:10px;}
+.pic .span4 a{font-weight:bold;}
+.pic .span4 .content-img{float:left;margin-right:10px;}
+.pic .span4 .textNews{height:60px;overflow: hidden;width:160px;}
+.pic .span4 .dataNew{display:block;font-size:11px;}
+.pic ul{list-style: none;}
+.pic ul li .content-img{float:left;margin-right:10px;}
+.pic ul li a{font-weight:bold;}
