--- a/themes/admin/media/css/stylesheet.css
+++ b/themes/admin/media/css/stylesheet.css
@@ -273,3 +273,4 @@ table.form2 td {
 #form1 ul.sublist li{vertical-align: middle;margin:10px 0px;}
 #form1 ul.sublist{list-style:none;width:70%;}
 #form1 ul.sublist label{display:inline-block;width:100px;}
+#menu  ul.sublist{padding-left:10px;}
