--- a/themes/map/media/css/stylesheet.css
+++ b/themes/map/media/css/stylesheet.css
@@ -18,7 +18,7 @@ body {
              
                 }
 #loading{background:url(../images/loadingmove.gif) no-repeat;width:78px; height:20px;position:absolute;visibility:hidden;}
-#header{background:url(../images/headerGIS.jpg) no-repeat;width:11014px;height:160px;margin:-8px;padding:0px;}
+#header{background:url(../images/headerGIS_new2.jpg) no-repeat;width:11014px;height:160px;margin:-8px;padding:0px;}
 #map	{width:1180px; border-color: #CCCCCC #CCCCCC #999999;border-style: solid;border-width: 1px;
     		box-shadow: 0 2px 5px rgba(64, 64, 64, 0.1);padding:5px;overflow:hidden;background: #FFF;margin-left:-6px;clear:both;margin-top:8px;}
 
