--- a/themes/default/media/css/style.css
+++ b/themes/default/media/css/style.css
@@ -124,4 +124,6 @@ ul#description li{float:left;width:100px;}
 .marquee{width:100%;background-color:#FAE2F0;margin-bottom:5px;border-radius:0.75em;height:29px;padding-bottom:5px;}
 .textMarquee{height:15px;padding-bottom:2px;}
 
+#download{ margin-left: 100px}
+
 
