--- a/media/css/style.css
+++ b/media/css/style.css
@@ -468,7 +468,7 @@ vertical-align:top
 .tr-graph3 div{width:900;}
 .tr-graph3 .container1{width:900px;margin:0 auto;height:450px;border:1px solid #CCCCCC}
 
-.tr-graph  .container{width:660px;height:305px;border:1px solid #CCCCCC}
+.tr-graph  .container{height:305px;border:1px solid #CCCCCC}
 
 .tr-graph  .container3{width:1311px;height:560px;border:1px solid #CCCCCC}
 .btn_close{float:right;}
