--- a/media/css/default.css
+++ b/media/css/default.css
@@ -4,7 +4,7 @@
 .alignright{text-align:right;}
 .aligncenter{text-align:center;}
 .clear{clear:both;}
-
+.none{display:none;}
 h1, h2, h3, h4, h5, h6 {color: #363636;font-weight: bold;}
 
 h1{ font-size: 31px; padding: 0 0 10px 0; }				
